# world-cup-qatar-elt-airflow-dbt

./: .dockerignore  .gcloudignore  CLAUDE.md  Dockerfile  README.md  dbt_requirements.txt  deploy-dag.yaml  deploy-dbt-app.yaml  pyproject.toml
config/variables/dev/: variables.json
diagram/: airflow_dbt_cloud_run.excalidraw
file/: raw_bq_schema.json
world_cup_qatar_elt_dbt/dag/: settings.py  world_cup_qatar_elt_dbt_case1_dag.py  world_cup_qatar_elt_dbt_case2_dag.py
world_cup_qatar_elt_dbt/dbt/world_cup_qatar_elt/: profiles.yml
