[project]
name = "world-cup-qatar-elt-airflow-dbt"
version = "0.1.0"
description = "A real world use case of ELT with DBT and BigQuery, based on Qatar Fifa World Cup Data"
requires-python = ">=3.13,<3.14"

[dependency-groups]
dev = [
    "dbt-core>=1.11.7",
    "dbt-bigquery>=1.11.1",
    "apache-airflow[google]>=3.2.0",
    "astronomer-cosmos>=1.14.0",
    "pytest>=9.0.3",
]
